--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "typescript": "^4.9.5",
     "@vscode/test-electron": "^2.3.0"
   },
-  "icon": "assets/icon.png"
+  "icon": "assets/images/icon.png"
 }
